[package]
name = "crowdfund"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.10.32"
borsh = "0.9.3"
borsh-derive = "0.9.3"
thiserror = "1.0.32"
num-derive = "0.3"
num-traits = "0.2"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }


[dev-dependencies]
solana-program-test = "1.10.32"
#solana-sdk = "1.10.32"

[lib]
name = "crowdfund"
crate-type = ["cdylib", "lib"]